[package]
name = "lootbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cw-storage-plus = "0.13.4"
cw-utils = "0.13"
nois = "0.7.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
cw-multi-test = "0.13.4"
